# mcp-internal-tool-docs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_internal_tool_docs/: __init__.py
