[project]
name = "internal-tool-docs-mcp"
version = "0.1.0"
description = "MCP server that serves llms.txt package documentation from a directory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Alex Pradas" }]
dependencies = ["fastmcp"]

[project.scripts]
internal-tool-docs-mcp = "mcp_internal_tool_docs:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_internal_tool_docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
